...
class _MyOwnGiftListPageState extends State<MyOwnGiftListPage> {
  List<Map<String, dynamic>> gifts = [];
  String? _sortBy = 'name';
  final DatabaseClass db = DatabaseClass();
  String? _selectedImagePath;
  final List<Map<String, String>> availableImages = [
    {'name': 'Headphone', 'path': 'assets/Images/headphones.jpg'},
    {'name': 'SmartWatch', 'path': 'assets/Images/smartwatch.jpg'},
    {'name': 'Necklace', 'path': 'assets/Images/necklace.jpeg'},
    {'name': 'Kindle', 'path': 'assets/Images/kindle.jpg'},
    {'name': 'Gaming Mouse', 'path': 'assets/Images/gamingmouse.jpg'},
    {'name': 'Boxing Gloves', 'path': 'assets/Images/boxinggloves.jpg'},
  ];
...
    final priceController = TextEditingController();

    showDialog(
      context: context,
      builder: (context) {
        return AlertDialog(
          title: Text('Add New Gift'),
          content: SingleChildScrollView(
            child: Column(
              children: [
                TextField(key: Key('MyGiftName'),controller: nameController, decoration: InputDecoration(labelText: 'Gift Name')),
                TextField(key: Key('MyGiftDescription'),controller: descriptionController, decoration: InputDecoration(labelText: 'Description')),
                TextField(key: Key('MyGiftCategory'),controller: categoryController, decoration: InputDecoration(labelText: 'Category')),
                TextField(key: Key('MyGiftPrice'),controller: priceController, decoration: InputDecoration(labelText: 'Price'), keyboardType: TextInputType.number),
                ElevatedButton(
                  onPressed: () {
                    _showImageSelectionDialog();
                  },
                  child: Text('Choose an Image'),
                ),
// Display the selected image if any

              ],
            ),
          ),
...
                  );
                  await _loadGifts(); // Refresh gift list
                  Navigator.pop(context);
                }

              },
              child: Text('Add Gift'),
            ),
          ],
        );
      },
    );
  }
...
